--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/react": "~18.2.79",
     "eslint": "^8.57.0",
     "eslint-config-universe": "^12.0.0",
+    "eslint-plugin-react-native-a11y": "3.5.1",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "npm-run-all": "^4.1.5",
